[package]
name = "limbo_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limbo_protocol = { path = "../limbo_protocol" }

log = { version = "0.4", "features" = [ "release_max_level_info" ] }
log4rs = { version = "1.0", features = [ "gzip", "background_rotation" ] }

crossbeam = "0.8"
tokio = { version = "1", features = [ "full" ] }
bytes = { version = "1", features = [ "std" ] }