[package]
name = "limbo_protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", "features" = [ "release_max_level_info" ] }

bytes = { version = "1", features = [ "std" ] }
uuid = "0.8"